scribble/scribble-assertions/src/test/resources/good/extensions/assrtcore/safety/assrtprog/statevar/AssrtCoreTest12.scr
module good.extensions.assrtcore.safety.assrtprog.AssrtCoreTest12;


type <java> "java.lang.Integer" from "rt.jar" as int;  // FIXME: int keyword


//*
global protocol Proto1(role A, role B) @"<z:=0> z=0"
{
	1(x:int) from A to B; @"((x=z) && (x=0))"
	2(y:int) from B to A; @"(y>x)"
	do Proto1(A, B);  @"<0>"  // Sat
}
//*/
